# opencv4.8_tutorial

./: .gitignore  CMakeLists.txt  Dockerfile  readme.md
data/SFMedu/: readme.txt
data/SFMedu/result/: readme.txt
data/SFMedu/result/4solutions/: pts3d_0.txt  pts3d_1.txt  pts3d_3.txt  wTc_0.txt  wTc_1.txt  wTc_2.txt  wTc_3.txt
data/SFMedu/result/selected_solution/: pts3d_w.txt  wTc1.txt
include/geom/: ImagedFeatures.h  PairMatcher.h  TwoViewGeometry.h
include/helpers/: CustomAssert.h  DisjointSet.h  ElapsedTime.h  MiscUtils.h  RawFileIO.h  TermColor.h
py/: example_1.py
scripts/: 1.py  2.py  common_colors.py  data_utils.py  make_grid.py  plotting_utils.py
src/: example_1.cpp
src/geom/: ImagedFeatures.cpp  PairMatcher.cpp  TwoViewGeometry.cpp
src/helpers/: MiscUtils.cpp  RawFileIO.cpp  TermColors.cpp
tests/: main.cpp  test_3d_reconstruction.cpp  test_multiply.cpp  test_opencv_contrib.cpp  test_opencv_examples.cpp  test_opencv_pose_computation.cpp
